environments/gloo-edge/rollouts-demo/echo-rollout/base/echo-virtualservice.yaml
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: echo
  namespace: gloo-system
spec:
  virtualHost:
    domains:
    - '*'
    routes:
    - matchers:
      - prefix: /a
      name: route-a
      routeAction:
        multi:
          destinations:
          - destination:
              upstream:
                name: echo-v1
                namespace: echo
            weight: 100
    - matchers:
      - prefix: /b
      name: route-b
      routeAction:
        single:
          upstream:
            name: echo-v1
            namespace: echo
---
